increase contrast in primary colour and calendar subheaders, fix minor bugs/tweaks in mobile menu html

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -426,6 +426,10 @@ $button-width: 35px;
     font-family: $font-family-heading;
     text-align: center;
     list-style: none;
+    font-family: $font-family-heading;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-decoration: none;
     padding: 0;
     margin: 0;
     flex: 0;
@@ -801,7 +805,7 @@ $button-width: 35px;
     font-weight: lighter;
     text-transform: uppercase;
 
-    color: rgba(255, 255, 255, 0.4);
+    color: $gray-500;
   }
 
   a+.tiny-header {
