--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,7 +2,7 @@ $grid-gutter-width: 20px;
 
 $white: #ffffff;
 $black: #000;
-$primary: #008eaa;
+$primary: #086a7e;
 $secondary: #1f2229;
 
 // Links
