--- a/_sass/components/_calendar.scss
+++ b/_sass/components/_calendar.scss
@@ -49,7 +49,7 @@
 
         .calendar-item-time {
             font-size: 90%;
-            color: $gray-600;
+            color: $gray-700;
             grid-row: content;
             grid-column: main;
         }
